Bug 467872 - Crash while splitting
Summary: Crash while splitting
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-03-28 07:28 UTC by Ami
Modified: 2026-02-06 21:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ami 2023-03-28 07:28:40 UTC
Application: konsole (22.12.3)

Qt Version: 5.15.8
Frameworks Version: 5.104.0
Operating System: Linux 6.2.8-1-default x86_64
Windowing System: X11
Distribution: openSUSE Tumbleweed
DrKonqi: 5.27.3 [KCrashBackend]

-- Information about the crash:
Not reproducible, probably not a bug. I am in an environment with a lot of EMI noise and while this is the first time it happens, it wouldn't be strange.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Konsole (konsole), signal: Aborted

[KCrash Handler]
#4  0x00007fba4ec94d7c in __pthread_kill_implementation () from /lib64/libc.so.6
#5  0x00007fba4ec43356 in raise () from /lib64/libc.so.6
#6  0x00007fba4ec2b897 in abort () from /lib64/libc.so.6
#7  0x00007fba4eeacbf7 in ?? () from /lib64/libstdc++.so.6
#8  0x00007fba4eebc26c in ?? () from /lib64/libstdc++.so.6
#9  0x00007fba4eebc2d7 in std::terminate() () from /lib64/libstdc++.so.6
#10 0x00007fba4eebc538 in __cxa_throw () from /lib64/libstdc++.so.6
#11 0x00007fba4eeaf4f7 in ?? () from /lib64/libstdc++.so.6
#12 0x00007fba5095df09 in std::vector<QVector<Konsole::Character>, std::allocator<QVector<Konsole::Character> > >::_M_range_check (this=0x562a8ccc64d0, __n=31) at /usr/include/c++/13/bits/stl_vector.h:1153
#13 std::vector<QVector<Konsole::Character>, std::allocator<QVector<Konsole::Character> > >::at (__n=31, this=0x562a8ccc64d0) at /usr/include/c++/13/bits/stl_vector.h:1175
#14 Konsole::Screen::setSelectionEnd (this=this@entry=0x562a8ccc64c0, x=x@entry=23, y=y@entry=31, trimTrailingWhitespace=trimTrailingWhitespace@entry=false) at /usr/src/debug/konsole-22.12.3/src/Screen.cpp:1815
#15 0x00007fba5095df4c in Konsole::Screen::selSetSelectionEnd (this=0x562a8ccc64c0, mode=0) at /usr/src/debug/konsole-22.12.3/src/Screen.cpp:285
#16 0x00007fba509c56e7 in Konsole::TerminalDisplay::keyPressEvent (this=0x562a8cc90340, event=<optimized out>) at /usr/src/debug/konsole-22.12.3/src/terminalDisplay/TerminalDisplay.cpp:2726
#17 0x00007fba501e7c15 in QWidget::event (this=0x562a8cc90340, event=0x7ffeaa32cd10) at kernel/qwidget.cpp:8704
#18 0x00007fba501a52ce in QApplicationPrivate::notify_helper (this=this@entry=0x562a8c35bcd0, receiver=receiver@entry=0x562a8cc90340, e=e@entry=0x7ffeaa32cd10) at kernel/qapplication.cpp:3640
#19 0x00007fba501ad1f8 in QApplication::notify (this=<optimized out>, receiver=0x562a8cc90340, e=0x7ffeaa32cd10) at kernel/qapplication.cpp:3002
#20 0x00007fba4f4ecb28 in QCoreApplication::notifyInternal2 (receiver=0x562a8cc90340, event=0x7ffeaa32cd10) at kernel/qcoreapplication.cpp:1064
#21 0x00007fba50202dfa in QWidgetWindow::event (this=0x562a8c7cb930, event=0x7ffeaa32cd10) at kernel/qwidgetwindow.cpp:293
#22 0x00007fba501a52ce in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x562a8c7cb930, e=0x7ffeaa32cd10) at kernel/qapplication.cpp:3640
#23 0x00007fba4f4ecb28 in QCoreApplication::notifyInternal2 (receiver=0x562a8c7cb930, event=0x7ffeaa32cd10) at kernel/qcoreapplication.cpp:1064
#24 0x00007fba4f9786d9 in QGuiApplicationPrivate::processKeyEvent (e=0x562a8cee3e70) at kernel/qguiapplication.cpp:2417
#25 0x00007fba4f9500dc in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#26 0x00007fba4991816a in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#27 0x00007fba4d516f96 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#28 0x00007fba4d517358 in ?? () from /lib64/libglib-2.0.so.0
#29 0x00007fba4d5173ec in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#30 0x00007fba4f5460b6 in QEventDispatcherGlib::processEvents (this=0x562a8c4382f0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#31 0x00007fba4f4eb5cb in QEventLoop::exec (this=this@entry=0x7ffeaa32cfa0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#32 0x00007fba4f4f3a50 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#33 0x00007fba4f96fe4c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#34 0x00007fba501a5245 in QApplication::exec () at kernel/qapplication.cpp:2832
#35 0x0000562a8c099165 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/konsole-22.12.3/src/main.cpp:252
[Inferior 1 (process 11109) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-04-30 00:17:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/852
Comment 2 Kurt Hindenburg 2023-05-12 21:37:43 UTC
Git commit 73026198bc44088e790b33898424a947dac283c0 by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 12/05/2023 at 21:12.
Pushed by hindenburg into branch 'master'.

Disable keyboard selection mode on resize

When resizing, the selection cursor can easily end up being out of
bounds, potentially causing a crash if trying to extend the selection
later.  Since resizing already clears the normal mouse selection on
konsole, it makes sense to also disable keyboard selection mode to avoid
trouble.

M  +1    -0    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/73026198bc44088e790b33898424a947dac283c0