Disable keyboard selection mode on resize

When resizing, the selection cursor can easily end up being out of
bounds, potentially causing a crash if trying to extend the selection
later.  Since resizing already clears the normal mouse selection on
konsole, it makes sense to also disable keyboard selection mode to avoid
trouble.

BUG: 467872